# today-learn

./: .gitignore  .pre-commit-config.yaml  Gemfile  README.md  REDME.md  _config.yml  about.md  index.md  lint_check_test.py  lint_check_test2.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint_and_type_check.yml
2024/04/: 0415.html  0415.md  0417.md  0418.md
_data/: navigation.yml
_posts/2024/04/: 2024-04-15-tl.md  2024-04-16-tl.md
all/: index.md
book/: index.md
book/_posts/: 2024-04-20-20240420-웹 API 디자인.md  2024-05-18-20240518-웹 API 디자인-4장.md
coding-test/: index.md
coding-test/_posts/level0/: 2024-07-08-20240708-parallel.md  programmers-level0-parallel.md
coding-test/_posts/level1/: 2024-07-11-20240711-체육복.md  2024-07-18-20240718-kakao.md
docs/: _config.yml
docs/_posts/2024/04/: 2024-04-18-tl.md  2024-04-19-tl.md
study/: index.md
study/_posts/2024/04/: 2024-04-15-20240415 TL.md  2024-04-16-20240416 TL.md  2024-04-17-20240417 TL.md  2024-04-18-20240418 TL.md  2024-04-19-20240419 TL.md  2024-04-20-20240420-TL.md  2024-04-23-20240423-TL.md  2024-04-24-20240424-TL.md  2024-04-25-20240425-TL.md  2024-04-26-20240426-TL.md  2024-04-28-20240428-TL.md  2024-04-30-20240430-TL.md
study/_posts/2024/05/: 2024-05-01-20240501-TL.md  2024-05-04-20240504-TL.md  2024-05-07-20240507-TL.md  2024-05-10-20240510-TL.md  2024-05-18-20240518-TL.md  2024-05-21-20240521-TL.md  2024-05-22-20240522-TL.md
study/_posts/2024/06/: 2024-06-03-20240603-TL.md  2024-06-18-20240618-TL.md
study/_posts/2024/07/: 2024-07-02-20240702-TL.md  (+1 more)
(+4 files in other folders)
