[tool.poetry]
name = "today-learn"
version = "0.1.0"
description = ""
authors = ["jslee <dlwhdtjd098@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.style-checker.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
black = "^24.4.0"
pylint = "^3.1.0"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
