[tool.poetry]
name = "today-learn"
version = "0.1.0"
description = ""
authors = ["jslee <dlwhdtjd098@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.style-checker.dependencies]
flake8 = "^7.0.0"
black = "^24.4.0"
ruff = "^0.3.7"
pre-commit = "^3.7.0"
reorder-python-imports = "^3.12.0"
pyright = "^1.1.358"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
